src/objects/Deferred_Processing_Queue__c.object
<CustomObject>
    <fields>
        <fullName>Async_Apex_Job_Id__c</fullName>
        <label>Async Apex Job Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Async_Apex_Job_Type__c</fullName>
        <label>Async Apex Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Batch</fullName>
                </value>
                <value>
                    <fullName>Queueable</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Finished__c</fullName>
        <label>Finished</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Group_Id__c</fullName>
        <label>Group Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasError</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsComplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsProcessing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsProcessing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <label>Job Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payload__c</fullName>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Started__c</fullName>
        <label>Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Deferred Processing Queue</label>
    <nameField>
        <displayFormat>DPQ-{0000000}</displayFormat>
        <label>Deferred Processing Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deferred Processing Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>